--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-cdk": "^2",
     "aws-cdk-lib": "^2",
     "constructs": "^10.3.0",
+    "cypress": "^14.5.3",
     "esbuild": "^0.23.1",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2"
